--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@ Html
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dự Án Những Khuôn Mặt Bất Tử - Hành Trình Số</title>
     
+    <!-- Thẻ Meta để hiển thị đẹp khi chia sẻ -->
     <meta property="og:title" content="Dự Án Những Khuôn Mặt Bất Tử">
     <meta property="og:description" content="Hành trình số - Thắp sáng ký ức, sáng mãi tên anh.">
     <meta property="og:image" content="https://i.imgur.com/P9XX9X.jpg">
     <meta property="og:type" content="website">
     
     <style>
+        /* Thiết lập hiển thị Full màn hình 100% */
         body, html {
             margin: 0;
             padding: 0;
@@ -30,6 +32,8 @@ Html
     </style>
 </head>
 <body>
+    <!-- HÃY DÁN LINK GOOGLE MỚI CỦA BẠN VÀO DÒNG DƯỚI (CHỖ src="...") NẾU CÓ -->
+    <!-- Nếu link chưa đổi thì cứ để nguyên link cũ này cũng được -->
     <iframe 
         src="https://script.google.com/macros/s/AKfycbyp8JG-XnMHJkCo77GVt4IA09yXYmNsd33r_0zUFxzGgK-B5aok0ThBLTi0sO5bkc-V/exec" 
         title="Những Khuôn Mặt Bất Tử"
