--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ Html
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dự Án Những Khuôn Mặt Bất Tử - Hành Trình Số</title>
     
-    <!-- Thẻ Meta để hiển thị đẹp khi chia sẻ -->
+    <!-- Thẻ Meta để hiển thị đẹp khi chia sẻ lên Facebook/Zalo -->
     <meta property="og:title" content="Dự Án Những Khuôn Mặt Bất Tử">
     <meta property="og:description" content="Hành trình số - Thắp sáng ký ức, sáng mãi tên anh.">
     <meta property="og:image" content="https://i.imgur.com/P9XX9X.jpg">
@@ -20,8 +20,8 @@ Html
             padding: 0;
             height: 100%;
             width: 100%;
-            overflow: hidden; 
-            background-color: #240046; 
+            overflow: hidden; /* Ẩn thanh cuộn của trình duyệt để dùng thanh cuộn của App */
+            background-color: #240046; /* Màu nền trùng với app */
         }
         iframe {
             border: none;
@@ -32,10 +32,9 @@ Html
     </style>
 </head>
 <body>
-    <!-- HÃY DÁN LINK GOOGLE MỚI CỦA BẠN VÀO DÒNG DƯỚI (CHỖ src="...") NẾU CÓ -->
-    <!-- Nếu link chưa đổi thì cứ để nguyên link cũ này cũng được -->
+    <!-- ĐÃ CẬP NHẬT LINK MỚI NHẤT CỦA BẠN TẠI ĐÂY -->
     <iframe 
-        src="https://script.google.com/macros/s/AKfycbyp8JG-XnMHJkCo77GVt4IA09yXYmNsd33r_0zUFxzGgK-B5aok0ThBLTi0sO5bkc-V/exec" 
+        src="https://script.google.com/macros/s/AKfycby5MpC8WdcHLMqTvUKYtTK-904pfO6HAGKCbe8eObXUGIy_D5iaVwUrfj8uFEkjrTQ/exec" 
         title="Những Khuôn Mặt Bất Tử"
         allow="camera; microphone; autoplay; clipboard-write; encrypted-media; picture-in-picture" 
         allowfullscreen>
