--- a/index.html
+++ b/index.html
@@ -1,40 +1,22 @@
-code
-Html
 <!DOCTYPE html>
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dự Án Những Khuôn Mặt Bất Tử - Hành Trình Số</title>
-    
-    <!-- Thẻ Meta để hiển thị đẹp khi chia sẻ lên Facebook/Zalo -->
     <meta property="og:title" content="Dự Án Những Khuôn Mặt Bất Tử">
     <meta property="og:description" content="Hành trình số - Thắp sáng ký ức, sáng mãi tên anh.">
     <meta property="og:image" content="https://i.imgur.com/P9XX9X.jpg">
     <meta property="og:type" content="website">
-    
     <style>
-        /* Thiết lập hiển thị Full màn hình 100% */
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            width: 100%;
-            overflow: hidden; /* Ẩn thanh cuộn của trình duyệt để dùng thanh cuộn của App */
-            background-color: #240046; /* Màu nền trùng với app */
-        }
-        iframe {
-            border: none;
-            width: 100%;
-            height: 100%;
-            display: block;
-        }
+        body, html { margin: 0; padding: 0; height: 100%; width: 100%; overflow: hidden; background-color: #240046; }
+        iframe { border: none; width: 100%; height: 100%; display: block; }
     </style>
 </head>
 <body>
-    <!-- ĐÃ CẬP NHẬT LINK MỚI NHẤT CỦA BẠN TẠI ĐÂY -->
+    <!-- ĐÃ THÊM ?v=2 ĐỂ ÉP CẬP NHẬT CODE MỚI -->
     <iframe 
-        src="https://script.google.com/macros/s/AKfycby5MpC8WdcHLMqTvUKYtTK-904pfO6HAGKCbe8eObXUGIy_D5iaVwUrfj8uFEkjrTQ/exec" 
+        src="https://script.google.com/macros/s/AKfycby5MpC8WdcHLMqTvUKYtTK-904pfO6HAGKCbe8eObXUGIy_D5iaVwUrfj8uFEkjrTQ/exec?v=2" 
         title="Những Khuôn Mặt Bất Tử"
         allow="camera; microphone; autoplay; clipboard-write; encrypted-media; picture-in-picture" 
         allowfullscreen>
