--- a/index.html
+++ b/index.html
@@ -2,21 +2,46 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Thiết lập hiển thị chuẩn trên điện thoại, chặn phóng to để không vỡ giao diện -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Dự Án Những Khuôn Mặt Bất Tử - Hành Trình Số</title>
+    
+    <!-- Icon hiển thị trên Tab trình duyệt (Favicon) -->
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/263/263062.png" type="image/png">
+
+    <!-- Thẻ Meta SEO & hiển thị đẹp khi chia sẻ Facebook/Zalo -->
+    <meta name="description" content="Thắp sáng ký ức, sáng mãi tên anh. Dự án phục dựng ảnh liệt sĩ - Hành trình số Việt Nam My Love.">
     <meta property="og:title" content="Dự Án Những Khuôn Mặt Bất Tử">
     <meta property="og:description" content="Hành trình số - Thắp sáng ký ức, sáng mãi tên anh.">
     <meta property="og:image" content="https://i.imgur.com/P9XX9X.jpg">
     <meta property="og:type" content="website">
+    
     <style>
-        body, html { margin: 0; padding: 0; height: 100%; width: 100%; overflow: hidden; background-color: #240046; }
-        iframe { border: none; width: 100%; height: 100%; display: block; }
+        /* CSS chuẩn để full màn hình và mượt trên mọi thiết bị */
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            width: 100%;
+            overflow: hidden; /* Chặn thanh cuộn thừa của trang mẹ */
+            background-color: #240046; 
+        }
+        iframe {
+            border: none;
+            width: 100%;
+            height: 100%;
+            display: block;
+            /* Dòng quan trọng để vuốt mượt trên iPhone/iPad */
+            -webkit-overflow-scrolling: touch; 
+        }
     </style>
 </head>
 <body>
-    <!-- ĐÃ THÊM ?v=2 ĐỂ ÉP CẬP NHẬT CODE MỚI -->
+    <!-- 
+       Link Script mới của bạn + tham số ?v=final để ép cập nhật code mới nhất 
+    -->
     <iframe 
-        src="https://script.google.com/macros/s/AKfycby5MpC8WdcHLMqTvUKYtTK-904pfO6HAGKCbe8eObXUGIy_D5iaVwUrfj8uFEkjrTQ/exec?v=2" 
+        src="https://script.google.com/macros/s/AKfycbzQ6JUWJTa18UAZGUhZEEYMg9uGS7FLEtoZTX20wF0C1-1v1EVZ0VZcKB6K-InkcY5E/exec?v=final" 
         title="Những Khuôn Mặt Bất Tử"
         allow="camera; microphone; autoplay; clipboard-write; encrypted-media; picture-in-picture" 
         allowfullscreen>
