--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 </head>
 <body>
     <!-- 
-       Link Script mới của bạn + tham số ?v=final để ép cập nhật code mới nhất 
+       Link Script MỚI NHẤT của bạn + tham số ?v=1 để đảm bảo load bản mới 
     -->
     <iframe 
-        src="https://script.google.com/macros/s/AKfycbzQ6JUWJTa18UAZGUhZEEYMg9uGS7FLEtoZTX20wF0C1-1v1EVZ0VZcKB6K-InkcY5E/exec?v=final" 
+        src="https://script.google.com/macros/s/AKfycbw9IpUxShhPMKH-UJ-6-BzPIAjzXmNg8aeZY4aIyRdU1f4zx0Zf-qltVlOz9hxGybXt/exec?v=1" 
         title="Những Khuôn Mặt Bất Tử"
         allow="camera; microphone; autoplay; clipboard-write; encrypted-media; picture-in-picture" 
         allowfullscreen>
