--- a/index.html
+++ b/index.html
@@ -2,28 +2,28 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <!-- Thiết lập hiển thị chuẩn trên điện thoại, chặn phóng to để không vỡ giao diện -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Dự Án Những Khuôn Mặt Bất Tử - Hành Trình Số</title>
+    <title>Dự Án Những Gương Mặt Bất Tử - Hành Trình Số</title>
     
-    <!-- Icon hiển thị trên Tab trình duyệt (Favicon) -->
-    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/263/263062.png" type="image/png">
+    <!-- CHỐNG CACHE TRÌNH DUYỆT (BẮT BUỘC ĐỂ CẬP NHẬT NGAY) -->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
 
-    <!-- Thẻ Meta SEO & hiển thị đẹp khi chia sẻ Facebook/Zalo -->
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/263/263062.png" type="image/png">
     <meta name="description" content="Thắp sáng ký ức, sáng mãi tên anh. Dự án phục dựng ảnh liệt sĩ - Hành trình số Việt Nam My Love.">
-    <meta property="og:title" content="Dự Án Những Khuôn Mặt Bất Tử">
+    <meta property="og:title" content="Dự Án Những Gương Mặt Bất Tử">
     <meta property="og:description" content="Hành trình số - Thắp sáng ký ức, sáng mãi tên anh.">
     <meta property="og:image" content="https://i.imgur.com/P9XX9X.jpg">
     <meta property="og:type" content="website">
     
     <style>
-        /* CSS chuẩn để full màn hình và mượt trên mọi thiết bị */
         body, html {
             margin: 0;
             padding: 0;
             height: 100%;
             width: 100%;
-            overflow: hidden; /* Chặn thanh cuộn thừa của trang mẹ */
+            overflow: hidden; 
             background-color: #240046; 
         }
         iframe {
@@ -31,18 +31,20 @@
             width: 100%;
             height: 100%;
             display: block;
-            /* Dòng quan trọng để vuốt mượt trên iPhone/iPad */
             -webkit-overflow-scrolling: touch; 
         }
     </style>
 </head>
 <body>
     <!-- 
-       Link Script MỚI NHẤT của bạn + tham số ?v=1 để đảm bảo load bản mới 
+       LƯU Ý QUAN TRỌNG: 
+       Tôi đã thêm tham số "&ver=update_moi_nhat_v2" vào cuối đường link.
+       Điều này giúp đánh lừa trình duyệt rằng đây là một trang hoàn toàn mới, 
+       buộc nó phải tải lại dữ liệu từ Google thay vì dùng bản cũ.
     -->
     <iframe 
-        src="https://script.google.com/macros/s/AKfycbw9IpUxShhPMKH-UJ-6-BzPIAjzXmNg8aeZY4aIyRdU1f4zx0Zf-qltVlOz9hxGybXt/exec?v=1" 
-        title="Những Khuôn Mặt Bất Tử"
+        src="https://script.google.com/macros/s/AKfycbw9IpUxShhPMKH-UJ-6-BzPIAjzXmNg8aeZY4aIyRdU1f4zx0Zf-qltVlOz9hxGybXt/exec?ver=update_moi_nhat_v2" 
+        title="Những Gương Mặt Bất Tử"
         allow="camera; microphone; autoplay; clipboard-write; encrypted-media; picture-in-picture" 
         allowfullscreen>
     </iframe>
