--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
        buộc nó phải tải lại dữ liệu từ Google thay vì dùng bản cũ.
     -->
     <iframe 
-        src="https://script.google.com/macros/s/AKfycbw9IpUxShhPMKH-UJ-6-BzPIAjzXmNg8aeZY4aIyRdU1f4zx0Zf-qltVlOz9hxGybXt/exec?ver=update_moi_nhat_v2" 
+      src="https://script.google.com/macros/s/AKfycbwsiZW2nFBAILkM_uZfYgBFEr1Hq_KEgOo3XQ1SGBtvmGKUsLKmMiLWLak8107Cj2bD/exec" 
         title="Những Gương Mặt Bất Tử"
         allow="camera; microphone; autoplay; clipboard-write; encrypted-media; picture-in-picture" 
         allowfullscreen>
